verificamos la seguridad y autentivacion, queda implementar los endpoints de PublicController, (RECORDAR habilirtar el secret)